--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
       </br>
         - <a href="/game.html"><span>Eaglercraft</span></a>
         </br>
+        - <a href="/browser.html"><span>Browser Online</span></a>
+        </br>
         - <a href="https://bit.ly/among-us-onilne-unblocked"><span>Among Us onilne</span></a>
-      </br>
+        </br>
         - <a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a>
     </p>
         </div>
