--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
-
+  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/ayoub3332.png?v=1683578692746" />
 
-    <!--
-      This is the page head - it contains info the browser uses
-      Like the title, which appears on the browser tab but not inside the page
-      Further down you'll see the content that displays in the page
-    -->
     <title>Ayoub3332</title>
 
     <!-- The website stylesheet -->
@@ -25,7 +16,7 @@
   </head>
   <style>
       span {
-        color: black; /* se establece el color de texto */
+        color: black;
       }
     </style>
   <style>
@@ -35,11 +26,7 @@
 }
   </style>
   <body>
-    <!--
-      The body includes the content you see in the page
-      Each element is defined using tags, like this <div></div>
-      The attributes like class="wrapper" let us style elements in the CSS
-    -->
+    
     <div class="wrapper">
       <div class="content" role="main">
         <h1 class="title">Ayoub3332</h1>
@@ -53,6 +40,8 @@
         - <a href="/browser.html"><span>Browser Online</span></a>
         </br>
         - <a href="https://bit.ly/among-us-onilne-unblocked"><span>Among Us onilne</span></a>
+        </br>
+        - <a href="/draw-free.glitch.com"><span>Draw!</span></a>
         </br>
         - <a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a>
     </p>
