--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         - <a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a>
     </p>
         </div>
-
+</body>
+<footer>
 <h2>Share:</h2>
 <div class="a2a_kit a2a_kit_size_50 a2a_default_style" data-a2a-url="https://ayoub3332.github.io/" data-a2a-title="Ayoub3332">
 <a class="a2a_button_email"></a>
@@ -63,6 +64,6 @@ a2a_config.locale = "es";
 <script async src="https://static.addtoany.com/menu/page.js"></script>
       </div>
     </div>
-  </body>
+  </footer>
 </html>
 
