--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
           <p>
             Websites I have created:
       </br>
-        - <a href="/game.html"><span>Eaglercraft</span></a>
+        - <button class="animated-button"><a href="/game.html"><span>Eaglercraft</span></a></button>
         </br>
-        - <a href="/browser.html"><span>Browser Online</span></a>
+        - <button class="animated-button"><a href="/browser.html"><span>Browser Online</span></a></button>
         </br>
-        - <a href="https://bit.ly/among-us-onilne-unblocked"><span>Among Us onilne</span></a>
+        - <button class="animated-button"><a href="https://bit.ly/among-us-onilne-unblocked"><span>Among Us onilne</span></a></button>
         </br>
-        - <a href="/draw-free.glitch.com"><span>Draw!</span></a>
+        - <button class="animated-button"><a href="/draw-free.glitch.com"><span>Draw!</span></a></button>
         </br>
-        - <a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a>
+        - <button class="animated-button"><a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a></button>
     </p>
         </div>
 </body>
