--- a/game.html
+++ b/game.html
@@ -56,7 +56,7 @@
     </br>
         - <a href="http://drive.google.com/uc?export=download&id=12tl0CpQTEGAhAhu-IbX6rIsRTevNLMO7"><span>1.8 (all languages)</span></a>
   </br>
-        lax1dude's website --> <a href="https://lax1dude.net/"><span>https://lax1dude.net/</span></a>
+        lax1dude's website -> <a href="https://lax1dude.net/"><span>https://lax1dude.net/</span></a>
   </p>
         </div>
 
