--- a/game.html
+++ b/game.html
@@ -60,6 +60,7 @@
   </p>
         </div>
 
+<footer>
 <h2>Share:</h2>
 <div class="a2a_kit a2a_kit_size_50 a2a_default_style" data-a2a-url="https://ayoub3332.github.io/" data-a2a-title="Ayoub3332">
 <a class="a2a_button_email"></a>
@@ -76,6 +77,6 @@ a2a_config.locale = "es";
 <script async src="https://static.addtoany.com/menu/page.js"></script>
       </div>
     </div>
-  </body>
+  </footer>
 </html>
 
