--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </br>
         - <a href="/browser.html"><span>Browser Online</span></a>
         </br>
-        - <a href="https://among-us-online-unblocked.glitch.me/"><span>Among Us onilne</span></a>
+        - <a href="https://among-us-online-unblocked.glitch.me/"><span>Among Us online</span></a>
         </br>
         - <a href="/draw-free.glitch.com"><span>Draw!</span></a>
         </br>
