--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </br>
         - <a href="/browser.html"><span>Browser Online</span></a>
         </br>
+        - <a href="/notes.html"><span>Notes</span></a>
+        </br>
         - <a href="https://among-us-online-unblocked.glitch.me/"><span>Among Us online</span></a>
         </br>
         - <a href="/draw-free.glitch.com"><span>Draw!</span></a>
