--- a/notes.html
+++ b/notes.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Notes</title>
+    <link rel="icon" href="https://ibb.co/rwqgywS" />
   </head>
   <body>
     <h1>Notes</h1>
