--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Notes</title>
-    <link rel="icon" href="https://ibb.co/rwqgywS" />
+    <link rel="icon" href="https://i.ibb.co/pLNgXL8/OIP-removebg-preview-3.png" />
   </head>
   <body>
     <h1>Notes</h1>
