--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </br>
         - <a href="https://among-us-online-unblocked.glitch.me/"><span>Among Us online</span></a>
         </br>
-        - <a href="/draw-free.glitch.com"><span>Draw!</span></a>
+        - <a href="https://draw-free.glitch.com/"><span>Draw!</span></a>
         </br>
         - <a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a>
     </p>
