--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </br>
         - <a href="https://draw-free.glitch.com/"><span>Draw!</span></a>
         </br>
-        - <a href="https://bit.ly/unbgam3596"><span>Unblocked Games 3596</span></a>
+        - <a href="https://bit.ly/unbgam3596/"><span>Unblocked Games 3596</span></a>
     </p>
         </div>
 <h2>Share:</h2>
