--- a/notes.html
+++ b/notes.html
@@ -15,6 +15,6 @@
 	<link rel="icon" type="image/svg+xml" href="https://cdn.glitch.global/f933b85a-7864-4517-9eb8-4f35f194cd7a/notes.png?v=1683964902801">
 </head>
 <body>
-	<iframe src="https://bit.ly/notes-unlimited"></iframe>
+	<iframe src="https://notes-unlimited.glitch.me/"></iframe>
 </body>
 </html>
