--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chromium or Firefox</title>
+	<title>Notes</title>
 	<style>
 		iframe {
 			position: fixed;
@@ -12,7 +12,7 @@
 			border: none;
 		}
 	</style>
-	<link rel="icon" type="image/svg+xml" href="https://cdn.glitch.global/f933b85a-7864-4517-9eb8-4f35f194cd7a/notes.png?v=1683964902801">
+	<link rel="icon" type="image/png" href="https://cdn.glitch.global/f933b85a-7864-4517-9eb8-4f35f194cd7a/notes.png?v=1683964902801">
 </head>
 <body>
 	<iframe src="https://notes-unlimited.glitch.me/"></iframe>
