--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/error-404.png?v=1684594108913" />
+<link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/error-404.png?v=1684594108913" />
 
-  <title>Error 404</title>
+<title>Error 404</title>
 </head>
 <body>
 There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.
 </body>
+</html>
