--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
 <body>
 <img src="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/Error%20404.png?v=1684595606472" style="display: block; margin: 0 auto;">
  </br>
-There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.
+<p style="text-align: center;">There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</p>
 </body>
 </html>
