--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <title>Error 404</title>
 </head>
-<body>
+<body style="background-image: url('https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/background.jpg?v=1684597464801');">
 <img src="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/Error%20404.png?v=1684595606472" width="75" height="45.83" style="display: block; margin: 0 auto;">
  </br>
 <p style="text-align: center;">There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</p>
