--- a/404.html
+++ b/404.html
@@ -3,10 +3,7 @@
 <head>
 <title>Error 404</title>
 </head>
-<body style="background-image: url('https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/background.jpg?v=1684597464801');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;">
+<body style="background-color: #f3efd4">
 <img src="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/Error%20404.png?v=1684595606472" width="750" height="458.3" style="display: block; margin: 0 auto;">
  </br>
 <p style="text-align: center;">There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</p>
