--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
 <body style="background-color: #f3efd4">
 <img src="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/Error%20404.png?v=1684595606472" width="750" height="458.3" style="display: block; margin: 0 auto;">
  </br>
-<p style="text-align: center;">There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</p>
+<p style="text-align: center; font-family: "Ubuntu-R.ttf", sans-serif; font-weight: 400;"><strong>There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</strong></p>
 </body>
 </html>
