--- a/404.html
+++ b/404.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
 <title>Error 404</title>
+<style>
+ @font-face {
+  font-family: 'Ubuntu';
+  src: url('ubuntu-regular.ttf') format('truetype'); /* Ruta relativa a la carpeta "fonts" */
+  font-weight: 400;
+  font-style: normal;
+}
+
+p {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 400;
+}
+ </style>
 </head>
 <body style="background-color: #f3efd4">
 <img src="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/Error%20404.png?v=1684595606472" width="750" height="458.3" style="display: block; margin: 0 auto;">
  </br>
-<p style="text-align: center; font-family: "Ubuntu-R.ttf", sans-serif; font-weight: 400;"><strong>There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</strong></p>
+<p style="text-align: center;"><strong>There is not nothing here. Go to <a href="https://ayoub3332.github.io/">https://ayoub3332.github.io/</a>.</strong></p>
 </body>
 </html>
