--- a/index.html
+++ b/index.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/ayoub3332.png?v=1683578692746" />
-  <title>Ayoub3332</title>
+  <head>
+  
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/ayoub3332.png?v=1683578692746" />
+
+    <title>Ayoub3332</title>
+
+    <!-- The website stylesheet -->
+    <link rel="stylesheet" href="/style.css" />
+
+    <!-- The website JavaScript file -->
+    <script src="/script.js" defer></script>
+  </head>
   <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .wrapper {
-      text-align: center;
-    }
-    span {
-      color: black;
-    }
-    a {
-      text-decoration: none;
-      border-bottom: 1px solid black;
-    }
+      span {
+        color: black;
+      }
+    </style>
+  <style>
+  a {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
   </style>
-</head>
-<body>
-  <div class="wrapper">
-    <h1 class="title">Ayoub3332</h1>
+  <body>
+    
+    <div class="wrapper">
+      <div class="content" role="main">
+        <h1 class="title">Ayoub3332</h1>
     <div class="instructions">
-      <h2>Hi my name is Ayoub and I'm a young programmer/gamer.</h2>
-      <p>
-        Websites I have created:<br />
-        - <a href="/game.html"><span>Eaglercraft</span></a><br />
-        - <a href="/browser.html"><span>Browser Online</span></a><br />
-        - <a href="/notes.html"><span>Notes</span></a><br />
-        - <a href="https://among-us-online-unblocked.glitch.me/"><span>Among Us online</span></a><br />
-        - <a href="https://draw-free.glitch.me/"><span>Draw!</span></a><br />
+          <h2>Hi my name is Ayoub and I'm a young programmer/gamer.</h2>
+          <p>
+            Websites I have created:
+      </br>
+        - <a href="/game.html"><span>Eaglercraft</span></a>
+        </br>
+        - <a href="/browser.html"><span>Browser Online</span></a>
+        </br>
+        - <a href="/notes.html"><span>Notes</span></a>
+        </br>
+        - <a href="https://among-us-online-unblocked.glitch.me/"><span>Among Us online</span></a>
+        </br>
+        - <a href="https://draw-free.glitch.me/"><span>Draw!</span></a>
+        </br>
         - <a href="https://bit.ly/unbgam3596/"><span>Unblocked Games 3596</span></a>
-      </p>
-    </div>
-    <h2>Share:</h2>
-  </div>
-  <footer>
-    <div class="a2a_kit a2a_kit_size_50 a2a_default_style" data-a2a-url="https://ayoub3332.github.io/" data-a2a-title="Ayoub3332">
-      <a class="a2a_button_email"></a>
-      <a class="a2a_button_facebook"></a>
-      <a class="a2a_button_snapchat"></a>
-      <a class="a2a_button_telegram"></a>
-      <a class="a2a_button_twitter"></a>
-      <a class="a2a_button_whatsapp"></a>
-    </div>
-    <script>
-      var a2a_config = a2a_config || {};
-      a2a_config.locale = "es";
-    </script>
-    <script async src="https://static.addtoany.com/menu/page.js"></script>
-  </footer>
+    </p>
+        </div>
+<h2>Share:</h2>
 </body>
+<footer>
+<div class="a2a_kit a2a_kit_size_50 a2a_default_style" data-a2a-url="https://ayoub3332.github.io/" data-a2a-title="Ayoub3332">
+<a class="a2a_button_email"></a>
+<a class="a2a_button_facebook"></a>
+<a class="a2a_button_snapchat"></a>
+<a class="a2a_button_telegram"></a>
+<a class="a2a_button_twitter"></a>
+<a class="a2a_button_whatsapp"></a>
+</div>
+<script>
+var a2a_config = a2a_config || {};
+a2a_config.locale = "es";
+</script>
+<script async src="https://static.addtoany.com/menu/page.js"></script>
+      </div>
+    </div>
+  </footer>
 </html>
