--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/ayoub3332.png?v=1683578692746" />
+    <link rel="icon" href="https://cdn.glitch.global/716265ac-0868-498c-9318-4609cfe6d085/ayoub3332.png?v=1683578692746" width="760" height="760" />
 
     <title>Ayoub3332</title>
 
