--- a/game.html
+++ b/game.html
@@ -22,6 +22,13 @@
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
+      <style>
+    body {
+      background-image: url('https://th.bing.com/th/id/OIG.ldjbeRlRPG1ZpvTTpst.?pid=ImgGn'); /* Reemplaza 'tu-imagen.jpg' con la ruta y nombre de tu imagen */
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
   </head>
   <style>
       span {
