--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
     <title>Eaglercraft</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/minecraft.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
