--- a/nowifi.html
+++ b/nowifi.html
@@ -2,22 +2,68 @@
 <html>
 <head>
     <title>Network Status Checker</title>
+    <style>
+        /* Add your styles for the modal here */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 999;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            text-align: center;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <div id="disconnected-message" style="display: none;">
-        <h1>You are not connected to the internet.</h1>
-        <p>Please check your network connection and try again.</p>
+    <div id="disconnected-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="closeModal()">&times;</span>
+            <h1>You are not connected to the internet.</h1>
+            <p>Please check your network connection and try again.</p>
+        </div>
     </div>
 
     <script>
+        // Function to display the modal
+        function openModal() {
+            const modal = document.getElementById("disconnected-modal");
+            modal.style.display = "block";
+        }
+
+        // Function to close the modal
+        function closeModal() {
+            const modal = document.getElementById("disconnected-modal");
+            modal.style.display = "none";
+        }
+
         // Function to check network status
         function checkNetworkStatus() {
-            const disconnectedMessage = document.getElementById("disconnected-message");
-
             if (!navigator.onLine) {
-                disconnectedMessage.style.display = "block";
+                openModal();
             } else {
-                disconnectedMessage.style.display = "none";
+                closeModal();
             }
         }
 
