--- a/nowifi.html
+++ b/nowifi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Network Status Checker</title>
+    <link rel="icon" href="https://cdn.glitch.global/27fd8cb7-6e3e-4fb8-a963-8ab5a4f702b8/batery.png?v=1685477583439" />
     <style>
         /* Add your styles for the modal here */
         .modal {
